# python

./: .gitignore  Readme.md  temp.py
advent_of_code/: README.md
advent_of_code/2015/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py
etf_stocks_spb/: etf_stocks.py  main.py  margin_stocks.py  market.py  models.py  portfolio_table.py  scrap.py  spb_stocks.py
learn/: vk_test.py
learn/auto_stuff/: .gitignore  backup_zip.py  clipboard.py  dict.py  join_pdfs.py  maplt.py  matchs_in_txts.py  multiclipboard.pyw  parse_page.py  password_validation.py  play_2048.py  quiz_creator.py  regexp.py  rename_dates.py  separate_pdf.py  text.txt  use_requests.py  use_selenium.py  vk_parse.py  xkcd.py  xkcd_thr.py
learn/byte_of_py/: a_byte_of_python.py
learn/flask/blog_sample/: blog.py  flask.sh
learn/network/: local_host_address.py
learn/network/chat/: client.py  server.py
learn/network/ping/: ping.py
learn/network/ping_1/: ping.py
learn/network/ping_2/: ping.py
learn/network/server_1/: check.py  flaskapp.py  server.py  server2.py
learn/network/simple/: convert_int.py  find_service_name.py  (+6 more)
learn/train_concurrency/: 1.py  async_requests.py  chain_coroutines.py  chain_download_pages.py  download_pages.py  main.py  using_queue.py
memorise_words/: README.md  main.py  memorize.py  models.py  pyproject.toml  requirements.txt  storage.py
memorise_words/src/memorise_words/: __init__.py  app.py  models.py  storage.py
memorise_words/tests/: __init__.py
speedtest/: main.py  result.bak  result.xls  speed_test.bat
train_counting_in_mind_app/: main.py
(+11 files in other folders)
